--- a/src/composer.json
+++ b/src/composer.json
@@ -6,18 +6,32 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "fruitcake/laravel-cors": "^2.0",
+        "doctrine/dbal": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.75",
+        "illuminate/support": "^9.0",
+        "laravel/cashier": "^13.17",
+        "laravel/fortify": "^1.19",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "league/flysystem": "^3.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^5.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-ignition": "^1.0",
+        "stripe/stripe-php": "^9.9",
+        "symfony/http-client": "^6.2",
+        "symfony/mailer": "^6.1",
+        "symfony/mailgun-mailer": "^6.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/lang": "~7.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
@@ -55,8 +69,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+        "php": "8.2.25"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
+    }
 }
