--- a/src/composer.json
+++ b/src/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravel-lang/lang": "^14.7",
         "league/flysystem": "^3.0",
         "league/flysystem-aws-s3-v3": "^3.0",
         "maatwebsite/excel": "^3.1",
@@ -26,13 +27,13 @@
         "symfony/mailgun-mailer": "^6.2"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
-        "laravel-lang/lang": "~7.0",
+        "laravel-lang/lang": "^14.7",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.6",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
