--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,9 @@ services:
     build: ./docker/php
     volumes:
       - ./src:/var/www/
-      - ./src/storage:/var/www/storage
-      - ./src/bootstrap/cache:/var/www/bootstrap/cache
 
   mysql:
+    platform: linux/x86_64
     image: mysql:8.0.26
     environment:
       MYSQL_ROOT_PASSWORD: root
