--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,8 +6,7 @@ RUN apt update \
   && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
   && docker-php-ext-install pdo_mysql zip \
   && apt install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev \
-  && docker-php-ext-configure gd --with-freetype --with-jpeg \
-  && docker-php-ext-install pdo_mysql zip gd
+  && docker-php-ext-configure gd --with-freetype --with-jpeg
 
 RUN curl -sS https://getcomposer.org/installer | php \
   && mv composer.phar /usr/local/bin/composer \
