Updated PHPUnit test-related files

--- a/src/.env.testing
+++ b/src/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=test
-APP_KEY=
+APP_KEY=base64:ipEVkNHjltgo6AY8apWsqjCZ7Js+DauPKDS+qfdhOfM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -57,3 +57,6 @@ STRIPE_SECRET=sk_test_51QLztUF8XhjTFbz95WQfB2biIdwcMiDmr4sjmytZQiBJJMyxVIrJ5ujx3
 BROWSER_DRIVER=chrome
 DUSK_DRIVER=chrome
 DUSK_HEADLESS=true
+DUSK_DRIVER_URL=http://localhost:9515
+DUSK_DRIVER_PATH=vendor/laravel/dusk/bin/chromedriver-mac-x64
+
