--- a/src/composer.json
+++ b/src/composer.json
@@ -29,11 +29,13 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel-lang/lang": "^14.7",
+        "laravel/dusk": "^7.13",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.6",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "symfony/process": "^6.4"
     },
     "autoload": {
         "psr-4": {
