--- a/src/.gitignore
+++ b/src/.gitignore
@@ -5,6 +5,7 @@
 /src/vendor
 /src/.env
 /src/.env.backup
+/src/.env.testing
 /src/.phpunit.result.cache
 /src/docker-compose.override.yml
 /src/Homestead.json
